5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1724_2526.log
== TEST (2019-05-14 11:02:01) 
-- CODE:
n1= int(input("insira um numero: "))
n2= int(input("insira um numero: "))
d1=1
d2=1
s1=0
s2=0
while d1<n1:
	y1=n1%d1
	if (y1==0):
		s1=s1+d1
	d1=d1+1
while d<n2:
	y2=n2%d2
	if (y2==0):
		s2=s2+d2
	d2=d2+1
print(d1,d2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    while d<n2:
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:20) 
-- CODE:
n1= int(input("insira um numero: "))
n2= int(input("insira um numero: "))
d1=1
d2=1
s1=0
s2=0
while d1<n1:
	y1=n1%d1
	if (y1==0):
		s1=s1+d1
	d1=d1+1
while d2<n2:
	y2=n2%d2
	if (y2==0):
		s2=s2+d2
	d2=d2+1
print(d1,d2)
-- OUTPUT:
2620 2924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:29) 
-- CODE:
n1= int(input("insira um numero: "))
n2= int(input("insira um numero: "))
d1=1
d2=1
s1=0
s2=0
while d1<n1:
	y1=n1%d1
	if (y1==0):
		s1=s1+d1
	d1=d1+1
while d2<n2:
	y2=n2%d2
	if (y2==0):
		s2=s2+d2
	d2=d2+1
print(d1,d2)
-- OUTPUT:
2620 2924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:14) 
-- CODE:
n1= int(input("insira um numero: "))
n2= int(input("insira um numero: "))
d1=1
d2=1
s1=0
s2=0
while d1<n1:
	y1=n1%d1
	if (y1==0):
		print(d1)
		s1=s1+d1
	d1=d1+1
while d2<n2:
	y2=n2%d2
	if (y2==0):
		print(d2)
		s2=s2+d2
	d2=d2+1
print(d1,d2)
-- OUTPUT:
1
2
4
5
10
20
131
262
524
655
1310
1
2
4
17
34
43
68
86
172
731
1462
2620 2924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:21) 
-- CODE:
n1= int(input("insira um numero: "))
n2= int(input("insira um numero: "))
d1=1
d2=1
s1=0
s2=0
while d1<n1:
	y1=n1%d1
	if (y1==0):
		print(d1)
		s1=s1+d1
	d1=d1+1
while d2<n2:
	y2=n2%d2
	if (y2==0):
		print(d2)
		s2=s2+d2
	d2=d2+1
print(d1,d2)
-- OUTPUT:
1
2
4
5
10
20
131
262
524
655
1310
1
2
4
17
34
43
68
86
172
731
1462
2620 2924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:42) 
-- CODE:
n1= int(input("insira um numero: "))
n2= int(input("insira um numero: "))
d1=1
d2=1
s1=0
s2=0
while d1<n1:
	y1=n1%d1
	if (y1==0):
		print(d1)
		s1=s1+d1
	d1=d1+1
while d2<n2:
	y2=n2%d2
	if (y2==0):
		print(d2)
		s2=s2+d2
	d2=d2+1
print(s1,s2)
-- OUTPUT:
1
2
4
5
10
20
131
262
524
655
1310
1
2
4
17
34
43
68
86
172
731
1462
2924 2620
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:55) 
-- CODE:
n1= int(input("insira um numero: "))
n2= int(input("insira um numero: "))
d1=1
d2=1
s1=0
s2=0
while d1<n1:
	y1=n1%d1
	if (y1==0):
		s1=s1+d1
	d1=d1+1
while d2<n2:
	y2=n2%d2
	if (y2==0):
		s2=s2+d2
	d2=d2+1
print(s1)
print(s2)
if (s1==n2)and(s2==n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:10:09) 
-- CODE:
n1= int(input("insira um numero: "))
n2= int(input("insira um numero: "))
d1=1
d2=1
s1=0
s2=0
while d1<n1:
	y1=n1%d1
	if (y1==0):
		s1=s1+d1
	d1=d1+1
while d2<n2:
	y2=n2%d2
	if (y2==0):
		s2=s2+d2
	d2=d2+1
print(s1)
print(s2)
if (s1==n2)and(s2==n1):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.160077
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
2924
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
284
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
66992
66928
AMIGOS
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
